--- a/src/css/contact_details.css
+++ b/src/css/contact_details.css
@@ -1,6 +1,8 @@
 .contact {
   padding: 50px;
 }
-#logo , #social_sticker, #contact_me {
+#logo,
+#social_sticker,
+#contact_me {
   padding: 50px;
 }
