--- a/src/styles.css
+++ b/src/styles.css
@@ -48,7 +48,7 @@ h5 {
   padding-bottom: 10px;
 }
 .latest_trek {
-  padding: 50px;
+  padding: 0px 50px 10px;
 }
 .im {
   padding: 10px 10px 10px 10px;
@@ -56,6 +56,8 @@ h5 {
 }
 .trek_img {
   text-align: center;
+  padding: 10px;
+  box-shadow: 0px 10px 5px 0px rgba(0, 0, 0, 0.2);
 }
 .motivatinal {
   padding: 70px 50px 150px 50px;
