--- a/src/styles.css
+++ b/src/styles.css
@@ -28,68 +28,12 @@ h1,
 h2,
 h3,
 h4,
+h5,
 h6 {
   font-family: "Poppins", sans-serif;
   color: #222222;
   line-height: 1.2em !important;
   font-weight: 600;
-}
-
-h5 {
-  font-family: "Poppins", sans-serif;
-  color: #fff;
-  line-height: 1.2em !important;
-  font-weight: 600;
-  font-size: 4em !important;
-}
-
-.upcoming_trek {
-  text-align: center;
-  padding-bottom: 10px;
-}
-.latest_trek {
-  padding: 0px 50px 10px;
-}
-.im {
-  padding: 10px 10px 10px 10px;
-  height: 300px;
-}
-.trek_img {
-  text-align: center;
-  padding: 10px;
-  box-shadow: 0px 10px 5px 0px rgba(0, 0, 0, 0.2);
-}
-.motivatinal {
-  padding: 70px 50px 150px 50px;
-
-  background-color: #8fb9c9;
-  background-image: url("https://www.transparenttextures.com/patterns/diagmonds-light.png");
-  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
-}
-.motivation_img {
-  height: 400px;
-  filter: brightness(170%);
-  float: left;
-}
-
-.motivationOfTrek {
-  position: absolute;
-  right: 50px;
-  z-index: 0;
-  background-color: #dbdbdb;
-  background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
-  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
-  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.4);
-}
-.Motivation_lines {
-  padding-top: 50px;
-  padding-left: 100px;
-}
-.motivation_image_block {
-  position: relative;
-  top: 100px;
-  left: 50px;
-  z-index: 1;
 }
 
 /*                            */
